--- a/styles/dcc.css
+++ b/styles/dcc.css
@@ -2079,6 +2079,15 @@ a.inline-roll {
   margin-bottom: 5px;
   width: 37px;
 }
+.dcc .character .ac-and-hp input[data-len="3"] {
+  font-size: 20px;
+}
+.dcc .character .ac-and-hp input[data-len="4"] {
+  font-size: 15px;
+}
+.dcc .character .ac-and-hp input[data-len="5"] {
+  font-size: 12px;
+}
 .dcc .character .ac-and-hp .ac-effects,
 .dcc .character .ac-and-hp .hp-effects {
   position: absolute;
@@ -2349,6 +2358,12 @@ a.inline-roll {
   border: 0;
   font-size: 22px;
 }
+.dcc .npc-grid .ac-and-hp input[data-len="4"] {
+  font-size: 18px;
+}
+.dcc .npc-grid .ac-and-hp input[data-len="5"] {
+  font-size: 14px;
+}
 .dcc .npc-grid .ac-and-hp .ac-effects,
 .dcc .npc-grid .ac-and-hp .hp-effects {
   display: flex;
@@ -2424,6 +2439,13 @@ a.inline-roll {
   height: 20px;
   margin-left: 5px;
   width: 20px;
+}
+.dcc .npc-grid .saving-throws .saving-throw-box input[data-len="3"] {
+  font-size: 10px;
+}
+.dcc .npc-grid .saving-throws .saving-throw-box input[data-len="4"] {
+  font-size: 8px;
+  letter-spacing: -0.5px;
 }
 .dcc .npc-grid .saving-throws .saving-throw-box .save-label-effects {
   display: flex;
